terraform/subnet.tf
resource "aws_subnet" "public" {

  count = length(var.availability_zones)

  vpc_id = aws_vpc.main.id

  cidr_block = cidrsubnet(
    var.vpc_cidr,
    8,
    count.index
  )

  availability_zone = var.availability_zones[count.index]

  map_public_ip_on_launch = true


  tags = {
    Name = "${var.project_name}-${var.environment}-public-subnet-${count.index + 1}"
  }
}



resource "aws_subnet" "private" {

  count = length(var.availability_zones)

  vpc_id = aws_vpc.main.id

  cidr_block = cidrsubnet(
    var.vpc_cidr,
    8,
    count.index + 10
  )


  availability_zone = var.availability_zones[count.index]


  tags = {
    Name = "${var.project_name}-${var.environment}-private-subnet-${count.index + 1}"
  }
}
