terraform/route-tables.tf
resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }


  tags = {

    Name = "${var.project_name}-${var.environment}-public-route-table"

  }

}



resource "aws_route_table_association" "public" {


  count = length(var.availability_zones)


  subnet_id = aws_subnet.public[count.index].id


  route_table_id = aws_route_table.public.id

}



resource "aws_route_table" "private" {


  count = length(var.availability_zones)


  vpc_id = aws_vpc.main.id



  route {


    cidr_block = "0.0.0.0/0"


    nat_gateway_id = aws_nat_gateway.main[count.index].id

  }



  tags = {


    Name = "${var.project_name}-${var.environment}-private-route-table-${count.index + 1}"


  }

}



resource "aws_route_table_association" "private" {


  count = length(var.availability_zones)


  subnet_id = aws_subnet.private[count.index].id


  route_table_id = aws_route_table.private[count.index].id

}
